# monaco-desktop

./: LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  actions.ts  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs
src-tauri/src/commands/: file.rs
src/components/: Editor.tsx  Monaco.tsx
src/gui/: App.css  App.tsx  Monaco.tsx  Tabs.tsx  main.tsx  tabs.css
src/hooks/: useKeyboard.tsx  useTabs.ts  useWindowSize.tsx
src/interactions/: actions.ts  commands.ts  startup.ts
