[package]
name = "monaco-desktop"
version = "0.0.0"
description = "Monaco"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[dependencies]
tauri = { version = "1", features = [ "cli", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14.1"
once_cell = "1.19.0"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
